    to a known format if needed.
  ! New Size property. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
    this property has a default implementation using the Width and Height properties.
! BitmapDataRow interface:
  ! The MoveNextRow method has been moved to the new IBitmapDataRowMovable interface
! IReadableBitmapData interface
  ! FirstRow returns an IReadableBitmapDataRowMovable instead of IReadableBitmapDataRow
  ! New GetMovableRow method. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
    this method has a default implementation.
  ! New GetColor32 method. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
    this method has a default implementation.
! IWritableBitmapData interface
  ! FirstRow returns an IWritableBitmapDataRowMovable instead of IWritableBitmapDataRow
  ! New GetMovableRow method. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
    this method has a default implementation.
  ! New SetColor32 method. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
    this method has a default implementation.
! IReadWriteBitmapData interface
  ! FirstRow returns an IReadWriteBitmapDataRowMovable instead of IReadWriteBitmapDataRow
  ! New GetMovableRow method. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
    this method has a default implementation.
! BitmapDataExtensions class:
  ! The ToBitmap/BeginToBitmap/EndToBitmap/ToBitmapAsync methods are now in the ReadableBitmapDataExtensions class
    of the KGySoft.Drawing package. When recompiling C# sources, this is not a breaking change if you use the
    KGySoft.Drawing package and use these methods as extensions (without the class name).
  + New Clone/CopyTo/DrawInto/Clear/TransformColors/Quantize/Dither overloads with IAsyncContext parameter.